<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/showMesage"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="148dp"
        android:text="@string/user_sent"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:textColor="@color/gray"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/showMesage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordShow"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/password_sent"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMesage" />

    <TextView
        android:id="@+id/birthdayShow"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/birthday_sent"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordShow" />

    <TextView
        android:id="@+id/nationShow"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/switch_text_show"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayShow" />
</androidx.constraintlayout.widget.ConstraintLayout>